lib/src/compiler/tests/testdata/errors/76.out
error[E001]: syntax error
 --> line:1:28
  |
1 | rule test { condition: 4 + }
  |                            ^ expected expression
  |